--- a/app/src/main/res/layout/activity_ger_notas.xml
+++ b/app/src/main/res/layout/activity_ger_notas.xml
@@ -7,7 +7,7 @@
     tools:context=".GerNotas">
 
     <LinearLayout
-        android:id="@+id/linearLayout5"
+        android:id="@+id/LLButtons"
         android:layout_width="368dp"
         android:layout_height="442dp"
         android:layout_marginBottom="8dp"
@@ -32,7 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+        app:layout_constraintTop_toBottomOf="@+id/LLButtons">
 
         <Button
             android:id="@+id/btnVoltar"
