--- a/app/src/main/res/layout/activity_cadastrar_agenda.xml
+++ b/app/src/main/res/layout/activity_cadastrar_agenda.xml
@@ -7,11 +7,18 @@
     tools:context="com.example.a3aetim.teste.CadastrarAgenda">
 
     <LinearLayout
+        android:id="@+id/linearLayout9"
         android:layout_width="355dp"
         android:layout_height="231dp"
+        android:layout_marginBottom="150dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="14dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/edtTitulo"
@@ -40,11 +47,17 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout10"
         android:layout_width="368dp"
         android:layout_height="52dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="451dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
 
         <Button
             android:id="@+id/btnVoltar"
