--- a/app/src/main/res/layout/activity_cadastrar_agenda.xml
+++ b/app/src/main/res/layout/activity_cadastrar_agenda.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/linearLayout9"
         android:layout_width="355dp"
-        android:layout_height="231dp"
+        android:layout_height="266dp"
         android:layout_marginBottom="150dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="14dp"
@@ -42,8 +42,14 @@
             android:id="@+id/btnSelDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="SelDate"
             android:text="@string/SelDate" />
+
+        <TextView
+            android:id="@+id/tvData"
+            android:layout_width="match_parent"
+            android:layout_height="41dp"
+            android:textAlignment="center"
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
