--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="368dp"
-        android:layout_height="122dp"
+        android:layout_height="150dp"
         android:layout_marginBottom="42dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -66,6 +66,14 @@
             android:layout_height="wrap_content"
             android:onClick="Cadastrar"
             android:text="@string/Cad" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Devs"
+            android:textAlignment="center"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
