--- a/app/src/main/res/layout/activity_cadastrar.xml
+++ b/app/src/main/res/layout/activity_cadastrar.xml
@@ -39,7 +39,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="157dp"
         android:layout_marginBottom="78dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -61,6 +61,14 @@
 
         <EditText
             android:id="@+id/edtPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/edtPass2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
