--- a/app/src/main/res/layout/activity_ger_agenda.xml
+++ b/app/src/main/res/layout/activity_ger_agenda.xml
@@ -6,19 +6,34 @@
     android:layout_height="match_parent"
     tools:context="com.example.a3aetim.teste.GerAgenda">
 
-    <LinearLayout
-        android:id="@+id/llGerA"
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="368dp"
-        android:layout_height="436dp"
-        android:layout_marginBottom="13dp"
+        android:layout_height="433dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/llGerA"
+            android:layout_width="368dp"
+            android:layout_height="436dp"
+            android:layout_marginBottom="13dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/linearLayout11"
@@ -27,12 +42,13 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llGerA">
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2">
 
         <Button
             android:id="@+id/btnVoltar"
